# agent-prism

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build.py  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: build.yml  docs.yml  publish.yml
docs/: mkdocs.yml
docs/docs/: cli-reference.md  exporting-agents.md  getting-started.md  index.md  patterns.md  playground-guide.md  scenarios.md
examples/: README.md
examples/basic_support/: support_agent.py  support_agent__prism.py  support_agent__scenarios.py
scripts/: build.py
src/: CLAUDE.md
src/agent_playbook/: agent_loader.py  api.py  cli.py  export.py  server.py
src/agent_playbook/_export/: export_agent.py  export_types.py
src/agent_prism/: agents.py  api.py  cli.py  export.py  server.py  types.py
src/agentbook/: agents.py  api.py  cli.py  export.py  server.py
webui/: .prettierignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
webui/src/: App.tsx  index.css
webui/src/components/: ThemeToggle.tsx
webui/src/components/Playground/: AgentSelector.tsx  ChatInput.tsx  ChatInterface.tsx  MessageBubble.tsx  ModelSelector.tsx  PartRenderer.tsx  SettingsFormEditor.tsx  SettingsSidebar.tsx  ThinkingMessage.tsx  ToolCallGroup.tsx  ToolCallMock.tsx  ToolsEditor.tsx
webui/src/components/Playground/parts/: SystemPromptPart.tsx  TextPart.tsx  ThinkingPart.tsx  ToolCallPart.tsx  ToolReturnPart.tsx  UserPromptPart.tsx
webui/src/components/ui/: button.tsx
webui/src/hooks/: useChat.ts  useOllamaStream.ts  usePendingToolApprovals.ts  useSettings.ts  useStreamingResponse.ts  useToggle.ts
webui/src/pages/: About.tsx  Home.tsx  NotFound.tsx
webui/src/types/: agent.ts  index.ts  message.ts  playground.ts
webui/src/utils/: apiClient.ts  chatErrorHandler.ts  cn.ts  messageBuilder.ts  messageHelpers.ts  objectHelpers.ts  ollamaClient.ts  text.ts  toolParser.ts  tools.ts
